welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:3: error: not found: value Fizz
    return Fizz
           ^fizzBuzz:5: error: not found: value Buzz
    return Buzz
           ^fizzBuzz:7: error: not found: value Fizz
    return Fizz Buzz
           ^